fix: refine bot workspace navigation and native controls